@@ -35,6 +35,7 @@ import org.apache.xml.security.c14n.implementations.Canonicalizer20010315ExclOmi
 import org.apache.xml.security.c14n.implementations.Canonicalizer20010315ExclWithComments;
 import org.apache.xml.security.c14n.implementations.Canonicalizer20010315OmitComments;
 import org.apache.xml.security.c14n.implementations.Canonicalizer20010315WithComments;
+import org.apache.xml.security.c14n.implementations.CanonicalizerPhysical;
 import org.apache.xml.security.exceptions.AlgorithmAlreadyRegisteredException;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
@@ -87,6 +88,11 @@ public class Canonicalizer {
      */
     public static final String ALGO_ID_C14N11_WITH_COMMENTS = 
         ALGO_ID_C14N11_OMIT_COMMENTS + "#WithComments";
+    /**
+     * Non-standard algorithm to serialize the physical representation for XML Encryption
+     */
+    public static final String ALGO_ID_C14N_PHYSICAL = 
+        "http://santuario.apache.org/c14n/physical";
 
     private static Map<String, Class<? extends CanonicalizerSpi>> canonicalizerHash = 
         new ConcurrentHashMap<String, Class<? extends CanonicalizerSpi>>();
@@ -197,6 +203,10 @@ public class Canonicalizer {
         canonicalizerHash.put(
             Canonicalizer.ALGO_ID_C14N11_WITH_COMMENTS, 
             Canonicalizer11_WithComments.class
+        );
+        canonicalizerHash.put(
+            Canonicalizer.ALGO_ID_C14N_PHYSICAL, 
+            CanonicalizerPhysical.class
         );
     }
 
