@@ -1,6 +1,8 @@
 Changelog for "Apache xml-security" <http://santuario.apache.org/>
 
 New in v1.5.2-SNAPSHOT:
+    Fixed SANTUARIO-309 - Default XMLCipher canonicalizer may decrypt element to the wrong namespace.
+    Fixed SANTUARIO-308 - Canonicalizer error when encrypting multiple elements.
     Fixed SANTUARIO-310 - Implement KeyResolvers for PrivateKeys and SecretKeys.
     Fixed SANTUARIO-305 - No way to register internal key resolvers in DECRYPT_MODE.
     Fixed SANTUARIO-306 - KeySelectors loop
